# mintuu-ai-ecosystem

./: .env.example  .file_inventory.txt  .gitignore  .section5_generated.md  Makefile  README.md  build_report_workflow.py  docker-compose.yml  execution_trace.json  generate_architecture.py  mintuu_flagship_report.html  mintuu_master_doc.md  mintuu_master_doc_final.md  project_snapshot.md  pyproject.toml  raw_reasoning_log.txt  render.yaml  requirements_v3.txt  run_flagships.py  run_flagships_v2.py  test_ollama.py  test_reasoning.py  test_workflow.py  vercel.json
agents/analytics_agent/: agent.py
agents/base_agent/: base.py
agents/ceo_agent/: agent.py  system_prompt.py
agents/finance_agent/: agent.py  system_prompt.py
agents/hr_agent/: agent.py
agents/infrastructure_agent/: agent.py
agents/legal_agent/: agent.py
agents/marketing_agent/: agent.py  system_prompt.py
agents/operations_agent/: agent.py
agents/production_agent/: agent.py
agents/research_agent/: agent.py  system_prompt.py
agents/security_agent/: agent.py
api/: app.py  auth.py  auth_routes.py  webhooks.py  websocket.py
automation/: autonomous_engine.py
cli/: main.py
config/: settings.py
core/adaptation/: behavior_optimizer.py  feedback_processor.py  learning_engine.py  strategy_evaluator.py  (+1 more)
database/: models.py
mintuu_ai_ecosystem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
monitoring/: orchestration_metrics.py  performance_monitor.py  system_profiler.py  tracing_engine.py  workflow_analytics.py
tools/: execution_manager.py  tool_registry.py
(+71 files in other folders)
